--- a/template/html/accueil.html
+++ b/template/html/accueil.html
@@ -37,7 +37,7 @@
         <div class="title">Bienvenue sur le Forum</div>
         <div id="topic-container">
             {{range .}}
-            <div class="topic" id="#topi">
+            <div class="topic" id="#topic">
                 <h3>{{.Title}}</h3>
                 <p>{{.Description}}</p>
             </div>
