[TopicRyan] made v2 admin working with moderator, change id to uuid to simple thing and hadle delete thing like topic users, made admin can promoted someone and i think thats all

--- a/template/css/profil.css
+++ b/template/css/profil.css
@@ -227,15 +227,14 @@ body {
     margin: 20px;
     display: inline-block;
     cursor: pointer;
-<<<<<<< HEAD
-        background: rgba(255, 255, 255, 0.31);
-        border-radius: 16px;
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(6.5px);
-        -webkit-backdrop-filter: blur(6.5px);
-        border: 1px solid rgba(255, 255, 255, 0.55);
+    background: rgba(255, 255, 255, 0.31);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border: 1px solid rgba(255, 255, 255, 0.55);
     }
-    
+
     .topic-content {
         padding: 10px;
         margin: 20px;
@@ -312,3 +311,22 @@ body {
     -webkit-backdrop-filter: blur(6.5px);
     border: 1px solid rgba(255, 255, 255, 0.55);
 }
+.admin-button {
+    font-size: 20px;
+    color: #FFFFFF;
+    padding: 10px;
+    text-decoration: none;
+    margin: 20px;
+    display: inline-block;
+    cursor: pointer;
+    background: rgba(255, 255, 255, 0.31);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border: 1px solid rgba(255, 255, 255, 0.55);
+    position: absolute;
+    top: 95px;
+    right: 20px;
+}
+
