--- a/template/html/accueil.html
+++ b/template/html/accueil.html
@@ -13,11 +13,6 @@
     </head>
 
 <body>
-    <form id="searchForm">
-        <input type="text" id="searchInput" placeholder="Search topics or users...">
-        <button type="submit">Search</button>
-    </form>
-    <div id="searchResults"></div>
 
 <div class="container">
     <div class="profile-section">
@@ -59,9 +54,9 @@
             </form>
             <h3>Categories</h3>
             <ul id="categoriesList">
-                <li>Granny</li>
-                <li>Granny</li>
-                <li>Granny</li>
+                <li>Politique</li>
+                <li>Actu</li>
+                <li>Animaux</li>
             </ul>
         </div>
         <div class="hashtags">
@@ -71,8 +66,9 @@
             </form>
             <h3>Hashtags</h3>
             <ul id="hashtagsList">
-                <li>#mesboules</li>
-                <li>#mesboules</li>
+                <li>#Nature</li>
+                <li>#BaigneToiDansLaSeine</li>
+                <li>#Films</li>
             </ul>
         </div>
         <div class="Search-Container">
@@ -81,6 +77,12 @@
                 <button type="submit" id="SearchBar">Search</button>
             </form>
             <div id="searchResults"></div>
+        </div>
+        <div class="log-out">
+            <a href="/logout" class="LogOut-link">
+                <i class='bx bx-log-out'></i>
+                Log-Out
+            </a>
         </div>
     </div>
 </div>
