--- a/template/html/postDetail.html
+++ b/template/html/postDetail.html
@@ -83,9 +83,9 @@
             </form>
             <h3>Categories</h3>
             <ul id="categoriesList">
-                <li>Granny</li>
-                <li>Granny</li>
-                <li>Granny</li>
+                <li>Politique</li>
+                <li>Actu</li>
+                <li>Animaux</li>
             </ul>
         </div>
         <div class="hashtags">
@@ -95,8 +95,9 @@
             </form>
             <h3>Hashtags</h3>
             <ul id="hashtagsList">
-                <li>#mesboules</li>
-                <li>#mesboules</li>
+                <li>#Nature</li>
+                <li>#BaigneToiDansLaSeine</li>
+                <li>#Films</li>
             </ul>
         </div>
     </div>
