--- a/template/css/connexion.css
+++ b/template/css/connexion.css
@@ -13,10 +13,6 @@ body{
     align-items: center;
     min-height: 100vh;
     background-image: url('/image/fond-ecran-forum.jpg');
-<<<<<<< HEAD
-
-=======
->>>>>>> Peaufinages
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -40,6 +36,7 @@ body{
     transform: perspective(1000px) rotateX(5deg) rotateY(-5deg);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
 .wrapper:hover, .wrapper-register:hover, .forgot-password:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     transform: perspective(900px) rotateX(2deg) rotateY(2deg);
@@ -50,7 +47,7 @@ body{
 }
 
 .wrapper-register {
-    display: none; /* Cache par défaut le formulaire de registre */
+    display: none;
 }
 .forgot-password{
     display: none;
