--- a/template/html/accueil.html
+++ b/template/html/accueil.html
@@ -19,6 +19,9 @@
         <div>
             <a class="profile" id="auth-button" href="/connexion">Connexion</a>
         </div>
+        <div>
+            <a class="postCreation" id="Creation-button" href="/createpost">Create</a>
+        </div>
         <div class="star"></div>
         <div class="star1"></div>
         <div class="star2"></div>
@@ -90,6 +93,4 @@
 <script src="../script/hashtag.js"></script>
 <script src="../script/topic.js"></script>
 </body>
-
-
 </html>
